[package]
name = "sunscreen_web3"
version = "0.1.0"
edition = "2021"

authors = ["Sunscreen"]
rust-version = "1.56.0"
license = "AGPL-3.0-only"
description = "Use sunscreen-enabled FHE in web3"
repository = "https://github.com/Sunscreen-tech/sunscreen_web3"
keywords = ["FHE", "BFV", "lattice", "cryptography", "web3", "ethereum"]
categories = ["cryptography", "web3"]

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
crypto-bigint = "0.5.2"
ethers = "2.0.7"
fhe_precompiles = { git = "https://github.com/Sunscreen-tech/fhe_precompiles", rev = "c3a2c184eb8ef7a136cc79f9e43567025d431be8" }
serde = "1.0.183"
# sunscreen = "0.8.0"
sunscreen = { git = "https://github.com/Sunscreen-tech/Sunscreen", rev = "4018eab87de46718e05ab9400873c338671b9f83" }
thiserror = "1.0.46"
tokio = { version = "1.31.0", features = ["macros"] }
